# tower-vm

./: Cargo.toml  LICENSE  README.md  info.rkt  main.rkt
.github/workflows/: ci.yml
scribblings/: spice.scrbl
spice/: prims.rkt
src/: const_fold.rs  const_table.rs  const_type.rs  constant.rs  gensym.rs  instruction.rs  lib.rs  machine.rs  value.rs
src/builder/: builder.rs  chunk.rs  constant.rs  function.rs  mod.rs
src/frontend/: lexer.py
src/interpreter/: instruction.rs  machine.rs  mod.rs  typeflag.rs  value.rs
tests/: hello_world.rs
